fix: spacing for moble view

--- a/css/media.css
+++ b/css/media.css
@@ -7,6 +7,8 @@
 @media (max-width: 500px) {
   .pokedex .heading {
     --font-size: 2rem;
+    width: 90%;
+    margin-block: 100px 30px;
   }
 
   .navigation-types {
